2007-07-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_thread): Don't forget to update the VFX
	state after opening it, fixes the visual effects showing up in the
	middle of video when using the browser plugin

2007-06-28  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Remove SWF files as supported, they're not
	(Closes: #450967)

2007-06-05  Gabor Kelemen  <kelemeng@gnome.hu>

	* browser-plugin/totem-plugin-viewer.c: Mark "Open with %s" string translatable
	(Closes: #443882)

2007-06-01  Christian Persch  <chpe@gnome.org>

	* src/totem-menu.c: (connect_proxy_cb),
	(totem_recent_manager_changed_callback), (totem_setup_recent):
	Don't use UTF-8 unsafe string manipulations to ellipsise but simply
	ellipsise the label itself. Bug #442371.

2007-06-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_show_properties):
	Ignore Ctrl+P when in fullscreen (Closes: #442673)

============ Version 2.18.2

2007-05-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: Release 2.18.2

2007-05-14  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_new): Update from
	libbacon

2007-05-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event_message):
	XINE_MSG_FILE_EMPTY is in all the versions now

2007-05-10  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemComplexPlugin.cpp: make the Complex
	plugin report version "10.0" through GetVersionInfo
	(Closes: #395881)
	* browser-plugin/totemGMPPlugin.cpp: remove FIXME
	for the WMP version

2007-05-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Up the required xine-lib version, to get the
	xine-lib fix at
	http://hg.debian.org/hg/xine-lib/xine-lib?cmd=changeset;node=2b182beaba68;style=gitweb
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_finalize), (bacon_video_widget_new),