@@ -1,3 +1,9 @@
+2007-08-23  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-disc.c: (cd_cache_free): 
+	Don't umount CDs/DVDs when we're freeing the cache, gnome-vfs will
+	eject them (Closes: #469636)
+
 2007-07-13  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-xine.c:
